@@ -1391,10 +1391,10 @@ Programs_WebKitPluginProcess_CXXFLAGS = \
 endif
 
 EXTRA_DIST += \
-	$(WebKit2)/UIProcess/API/gtk/docs/build-gtkdoc.py \
+	$(WebKit2)/UIProcess/API/gtk/docs/build-gtkdoc \
 	$(WebKit2)/UIProcess/API/gtk/docs/gtkdoc.py \
-	$(WebKit2)/UIProcess/API/gtk/docs/webkitgtk-docs.sgml \
-	$(WebKit2)/UIProcess/API/gtk/docs/webkitgtk-sections.txt \
+	$(WebKit2)/UIProcess/API/gtk/docs/webkit2gtk-docs.sgml \
+	$(WebKit2)/UIProcess/API/gtk/docs/webkit2gtk-sections.txt \
 	$(WebKit2)/UIProcess/API/gtk/docs/webkit2gtk.types \
 	$(WebKit2)/Scripts/generate-message-receiver.py \
 	$(WebKit2)/Scripts/generate-messages-header.py \
